Fix an overlap display bug about z-index used in the `wrap`.

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -3460,7 +3460,7 @@ tbody.collapse.in {
 .dropdown-menu > .active > a:focus {
   color: #fff;
   text-decoration: none;
-  background-color: #337ab7;
+  background-color: #3fc4ff;
   outline: 0;
 }
 .dropdown-menu > .disabled > a,
